# aws_cli

./: .gitignore  README.md  export_iam_users_from_profiles.py  export_identity_center_assignments.py  pyproject.toml  weekly_identity_center_org_audit.py
.claude/: CLAUDE.md
docs/superpowers/plans/: 2026-06-25-iam-identity-center-export.md  2026-06-25-iam-users-profile-export.md  2026-06-27-weekly-identity-center-org-audit.md
docs/wiki/: identity-center-org-audit.md
tests/: test_export_iam_users_from_profiles.py  test_export_identity_center_assignments.py  test_weekly_identity_center_org_audit.py
