[project]
name = "aws-cli-audit-tools"
version = "0.1.2"
description = "AWS IAM Identity Center and IAM audit export utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "boto3>=1.34",
]

[project.scripts]
identity-center-export = "export_identity_center_assignments:main"
iam-users-export = "export_iam_users_from_profiles:main"
identity-center-org-audit = "weekly_identity_center_org_audit:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "export_identity_center_assignments",
  "export_iam_users_from_profiles",
  "weekly_identity_center_org_audit",
]
